<resources>
    <string name="app_name">BKRAD-BN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="temp_title">Nhiệt độ (<sup>o</sup>C)</string>
    <string name="humi_title">Độ ẩm (%)</string>
    <string name="bottom_title">&#169; SANSLab ĐH Bách Khoa HN 2019</string>
    <string name="config_temp">Thiết lập nhiệt độ (<sup>o</sup>C)</string>
    <string name="config_humi">Thiết lập độ ẩm (%)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Tài khoản</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="update_warning_phone_number">Cập nhật số điện thoại nhận cảnh báo</string>
    <string name="update_information">Cập nhật thông tin</string>
    <string name="server">Cấu hình server</string>
    <string name="enter_domain">Nhập domain</string>
    <string name="domain">Domain</string>
    <string name="port">Port</string>
    <string name="enter_port">Nhập port</string>
    <string name="restore_default_setting">Thiết lập cấu hình mặc định</string>
    <string name="language_setting">Cấu hình ngôn ngữ</string>
    <string name="language">Ngôn ngữ</string>
    <string name="vietnamese_language">Việt Nam</string>
    <string name="english_language">Tiếng Anh</string>
    <string name="server_setting">Cấu hình cổng kết nối</string>
    <string name="title_more">More</string>
    <string name="title_activity_maps">Map</string>
    <string name="account_infor">Thông tin tài khoản</string>
    <string name="user_name">Username (Số điện thoại)</string>
    <string name="email">Email</string>
    <string name="fullName">Full name</string>
    <string name="enterprise">Enterprise</string>
    <string name="graph_setting">Cấu hình biểu đồ</string>
    <string name="graph_line">Biểu đồ đường</string>
    <string name="graph_barchart">Biểu đồ cột</string>
</resources>
