<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTextPrimary"
    android:orientation="vertical"
    tools:context=".fragment.MoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--CardView account-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--Title-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorSecond"
                        android:text="@string/account"
                        android:padding="15dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorTextPrimary"/>

                    <!--Account information-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_person_pin_circle_white_36dp"
                            android:scaleType="fitCenter"
                            android:tint="@color/colorGrey"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/account_information"
                            android:textSize="13sp"
                            android:padding="@dimen/size15dp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorGrey"/>

                    <!--Change warning phone number-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_system_update_white_24dp"
                            android:scaleType="fitCenter"
                            android:tint="@color/colorGrey"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update_information"
                            android:textSize="13sp"
                            android:padding="@dimen/size15dp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorDivider"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_person_pin_circle_white_36dp"
                            android:scaleType="fitCenter"
                            android:tint="@color/colorGrey"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/account_information"
                            android:textSize="13sp"
                            android:padding="@dimen/size15dp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--CardView server -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <!--Title-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorSecond"
                        android:text="@string/server"
                        android:padding="15dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorTextPrimary"/>

                    <!--Account information-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="0.65">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_cloud_circle_white_36dp"
                            android:tint="@color/colorGrey"
                            android:scaleType="fitCenter"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/server_setting"
                            android:textSize="13sp"
                            android:padding="@dimen/size15dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorDivider"/>

                    <!--Origianal settings-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="0.65">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_perm_data_setting_white_36dp"
                            android:tint="@color/colorGrey"
                            android:scaleType="fitCenter"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restore_default_setting"
                            android:textSize="13sp"
                            android:padding="@dimen/size15dp"/>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--CardView language -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <!--Title-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorSecond"
                        android:text="@string/language_setting"
                        android:padding="15dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorTextPrimary"/>

                    <!--Account information-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:checkedButton="@id/rbVietnamese"
                            android:weightSum="2">
                            <RadioButton
                                android:id="@+id/rbVietnamese"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/vietnamese_language"/>
                            <RadioButton
                                android:id="@+id/rbEnglish"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/english_language"/>
                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>