<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Account information-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecond"
            android:text="@string/account_information"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="15sp"
            android:textColor="@color/colorTextPrimary"/>

        <!--Username-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="13sp"
                    android:padding="@dimen/size15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtUserName"
                    android:layout_marginLeft="35dp"
                    android:text="0981001123"
                    android:textSize="13sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Full Name-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullName"
                    android:textSize="13sp"
                    android:padding="@dimen/size15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtFullName"
                    android:layout_marginLeft="35dp"
                    android:text="Vu Anh Tuan"
                    android:textSize="13sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--Email-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="13sp"
                    android:padding="@dimen/size15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEmail"
                    android:layout_marginLeft="35dp"
                    android:text="vutuan.bkset@gmail.com"
                    android:textSize="13sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Enterprise-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enterprise"
                    android:textSize="13sp"
                    android:padding="@dimen/size15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEnterprise"
                    android:layout_marginLeft="35dp"
                    android:text="So khoa hoc cong nghe"
                    android:textSize="13sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Update infor -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnBackUser"
                        android:drawableStart="@drawable/ic_back_18dp"
                        android:drawableTint="@color/colorSecondPrimary"
                        android:background="@color/colorWhite"
                        android:textColor="@color/colorSecondPrimary"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:text="Back"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnUpdateUser"
                        android:drawableStart="@drawable/ic_update_user_18dp"
                        android:drawableTint="@color/colorSecondPrimary"
                        android:background="@color/colorWhite"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorSecondPrimary"
                        android:text="Update"/>
                </RelativeLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v7.widget.CardView>